--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
@@ -25,12 +27,15 @@
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
+    "eslint": "9.x",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^15.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.1.6"
   }
 }
