--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/barlow-semi-condensed": "^5.0.19",
-    "canvas-confetti": "^1.9.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2"
+    "@fontsource/barlow-semi-condensed": "5.0.20",
+    "canvas-confetti": "1.9.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.23.1",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.0.1",
-    "@eslint/js": "^9.3.0",
-    "@types/canvas-confetti": "^1.6.4",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "9.x",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "globals": "^15.3.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^7.11.0",
-    "vite": "^5.1.6"
+    "@eslint/compat": "1.0.1",
+    "@eslint/js": "9.3.0",
+    "@types/canvas-confetti": "1.6.4",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
+    "@vitejs/plugin-react-swc": "3.7.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "9.3.0",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.7",
+    "globals": "15.3.0",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.11.0",
+    "vite": "5.2.11"
   }
 }
