--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+bun.lockb
 
 # Runtime data
 pids
@@ -158,4 +159,3 @@ sketch
 # End of https://www.toptal.com/developers/gitignore/api/node,react
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
