--- a/package.json
+++ b/package.json
@@ -7,37 +7,49 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "prepare": "husky"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fontsource/barlow-semi-condensed": "5.0.20",
     "canvas-confetti": "1.9.3",
-    "husky": "^9.0.11",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemon": "^3.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "zustand": "4.5.2"
   },
   "devDependencies": {
-    "@eslint/compat": "1.0.1",
-    "@eslint/js": "9.3.0",
+    "@eslint/compat": "1.1.0",
+    "@eslint/js": "9.4.0",
     "@types/canvas-confetti": "1.6.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.11.0",
-    "@typescript-eslint/parser": "7.11.0",
+    "@types/socket.io": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "7.13.0",
+    "@typescript-eslint/parser": "7.13.0",
     "@vitejs/plugin-react-swc": "3.7.0",
     "autoprefixer": "10.4.19",
-    "eslint": "9.3.0",
-    "eslint-plugin-react": "7.34.1",
+    "eslint": "9.4.0",
+    "eslint-plugin-react": "7.34.2",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
-    "globals": "15.3.0",
+    "globals": "15.4.0",
     "postcss": "8.4.38",
-    "tailwindcss": "3.4.3",
+    "standard": "^17.1.0",
+    "tailwindcss": "3.4.4",
     "typescript": "5.4.5",
-    "typescript-eslint": "7.11.0",
-    "vite": "5.2.11"
+    "typescript-eslint": "7.13.0",
+    "vite": "5.3.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "standard"
+    ]
   }
 }
